--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@coreui/react": "^3.0.4",
     "@coreui/react-chartjs": "^1.0.1",
     "@coreui/utils": "^1.3.1",
+    "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
